# packaging_tutorial

./: .gitignore  README.md  pyproject.toml
src/example_package_juan_vizcarra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
