[project]
name = "example_package_juan_vizcarra"
version = "0.0.2"
authors = [
  { name="Juan Vizcarra", email="jvizcar@emory.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jvizcar/packaging_tutorial"
Issues = "https://github.com/jvizcar/packaging_tutorial/issues"